force-app/main/default/objects/Raffle_Json_Log__c/Raffle_Json_Log__c.object-meta.xml
<CustomObject>
    <label>Raffle Json Log</label>
    <nameField>
        <displayFormat>raffle-{0000}</displayFormat>
        <label>Raffle Json Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>raffleJsonLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>