force-app/main/default/objects/Raffle_Json_Log__c/fields/Address_city__c.field-meta.xml
<CustomField>
    <fullName>Address_city__c</fullName>
    <label>Address city</label>
    <length>50</length>
    <type>Text</type>
</CustomField>