force-app/main/default/objects/Raffle_Json_Log__c/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <label>Address Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>