force-app/main/default/objects/Raffle_Json_Log__c/fields/Address_number__c.field-meta.xml
<CustomField>
    <fullName>Address_number__c</fullName>
    <label>Address number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>