force-app/main/default/objects/Raffle_Json_Log__c/fields/Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Address_PostalCode__c</fullName>
    <label>Address PostalCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>