force-app/main/default/objects/Raffle_Json_Log__c/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <label>Address State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>