force-app/main/default/objects/Raffle_Json_Log__c/fields/Address_street__c.field-meta.xml
<CustomField>
    <fullName>Address_street__c</fullName>
    <label>Address street</label>
    <length>60</length>
    <type>Text</type>
</CustomField>