force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount__c</fullName>
    <label>Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>