force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Donation_Comment__c</fullName>
    <label>Donation Comment</label>
    <type>TextArea</type>
</CustomField>