force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_date_paid__c.field-meta.xml
<CustomField>
    <fullName>Donation_date_paid__c</fullName>
    <label>Donation date paid</label>
    <type>Date</type>
</CustomField>