force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_fee__c.field-meta.xml
<CustomField>
    <fullName>Donation_fee__c</fullName>
    <label>Donation fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>