force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_Id__c.field-meta.xml
<CustomField>
    <fullName>Donation_Id__c</fullName>
    <label>Donation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>