force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_Po_number__c.field-meta.xml
<CustomField>
    <fullName>Donation_Po_number__c</fullName>
    <label>Donation Po number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>