force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Donation_UTM_Campaign__c</fullName>
    <label>Donation UTM Campaign</label>
    <length>60</length>
    <type>Text</type>
</CustomField>