force-app/main/default/objects/Raffle_Json_Log__c/fields/Donation_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Donation_UTM_Source__c</fullName>
    <label>Donation UTM Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>