force-app/main/default/objects/Raffle_Json_Log__c/fields/Member_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Member_Birthday__c</fullName>
    <label>Member Birthday</label>
    <type>Date</type>
</CustomField>