force-app/main/default/objects/Raffle_Json_Log__c/fields/Member_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Member_FirstName__c</fullName>
    <label>Member FirstName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>