force-app/main/default/objects/Raffle_Json_Log__c/fields/Member_LastName__c.field-meta.xml
<CustomField>
    <fullName>Member_LastName__c</fullName>
    <label>Member LastName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>