force-app/main/default/objects/Raffle_Json_Log__c/fields/Member_Phone__c.field-meta.xml
<CustomField>
    <fullName>Member_Phone__c</fullName>
    <label>Member Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>