force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_Date_created__c.field-meta.xml
<CustomField>
    <fullName>Raffle_Date_created__c</fullName>
    <label>Raffle Date created</label>
    <type>Date</type>
</CustomField>