force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_PO_number__c.field-meta.xml
<CustomField>
    <fullName>Raffle_PO_number__c</fullName>
    <label>Raffle PO number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>