force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_Sub_total__c.field-meta.xml
<CustomField>
    <fullName>Raffle_Sub_total__c</fullName>
    <label>Raffle Sub total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>