force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_Tax_Ref_ID__c.field-meta.xml
<CustomField>
    <fullName>Raffle_Tax_Ref_ID__c</fullName>
    <label>Raffle Tax_Ref_ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>