force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_total_fee__c.field-meta.xml
<CustomField>
    <fullName>Raffle_total_fee__c</fullName>
    <label>Raffle total fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>