force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_total_purchased__c.field-meta.xml
<CustomField>
    <fullName>Raffle_total_purchased__c</fullName>
    <label>Raffle total purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>