force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_UTM__c.field-meta.xml
<CustomField>
    <fullName>Raffle_UTM__c</fullName>
    <label>Raffle UTM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>