force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Raffle_UTM_Campaign__c</fullName>
    <label>Raffle UTM Campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>