force-app/main/default/objects/Raffle_Json_Log__c/fields/Raffle_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Raffle_UTM_Source__c</fullName>
    <label>Raffle UTM Source</label>
    <length>60</length>
    <type>Text</type>
</CustomField>