force-app/main/default/objects/Raffle_Json_Log__c/fields/RaffleID__c.field-meta.xml
<CustomField>
    <fullName>RaffleID__c</fullName>
    <label>RaffleID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>