force-app/main/default/objects/Raffle_Json_Log__c/fields/RaffleName__c.field-meta.xml
<CustomField>
    <fullName>RaffleName__c</fullName>
    <label>RaffleName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>