force-app/main/default/objects/Raffle_Json_Log__c/fields/Sale_id__c.field-meta.xml
<CustomField>
    <fullName>Sale_id__c</fullName>
    <label>Sale id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>